【Feat_執行自動執行資料庫遷移】新增藍連字串
新增資料庫遷移和初始化程式碼

在 `Program.cs` 中，新增了資料庫遷移和初始化的程式碼。具體來說，使用 `app.Services.CreateScope()` 創建了一個範圍，並從中獲取 `MeichuHackaThonDBContext` 服務。接著，呼叫 `context.Database.Migrate()` 來執行資料庫遷移，並使用 `SeedData.Initialize(service)` 來初始化資料。

在 `appsettings.json` 中，新增了 `ConnectionStrings` 設定，並設定 `OrderMealsContext` 的連接字串為 `Data Source=localhost;Database=MeichuHackaThon2024;Trusted_Connection=True;TrustServerCertificate=True;`。

在 `MeichuHackaThonDBContext.cs` 中，修改了 `OnConfiguring` 方法內的資料庫連接字串，從 `Server=localhost;Database=OrderMeals;` 改為 `Server=localhost;Database=MeichuHackaThon2024;`。

--- a/MeichuHackaThon/appsettings.json
+++ b/MeichuHackaThon/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "OrderMealsContext": "Data Source=localhost;Database=MeichuHackaThon2024;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
 }
