--- a/MeichuHackaThon/appsettings.json
+++ b/MeichuHackaThon/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "OrderMealsContext": "Data Source=localhost;Database=MeichuHackaThon2024;Trusted_Connection=True;TrustServerCertificate=True;"
+    "MeichuHackaThon2024DBContext": "Data Source=localhost;Database=MeichuHackaThon2024DBContext;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
