新增 NuGet 套件引用並更新資料庫連接字串
在 `MeichuHackaThon2024.csproj` 中，新增了以下 NuGet 套件引用：
  * `Microsoft.AspNetCore.Authentication.JwtBearer` 版本 `8.0.10`
  * `Microsoft.EntityFrameworkCore.Design` 版本 `8.0.10`，並且設定了 `PrivateAssets` 為 `all` 和 `IncludeAssets` 為 `runtime; build; native; contentfiles; analyzers; buildtransitive`
  * `Microsoft.EntityFrameworkCore.SqlServer` 版本 `8.0.10`
  * `Microsoft.EntityFrameworkCore.Tools` 版本 `8.0.10`，並且設定了 `PrivateAssets` 為 `all` 和 `IncludeAssets` 為 `runtime; build; native; contentfiles; analyzers; buildtransitive`

在 `appsettings.json` 中，將原本的資料庫連接字串 `MeichuHackaThon2024DBContext` 改為 `ConnectionStrings` 物件，並新增了 `MeichuHackaThonDBContext` 的連接字串。

--- a/MeichuHackaThon2024/appsettings.json
+++ b/MeichuHackaThon2024/appsettings.json
@@ -6,5 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "MeichuHackaThon2024DBContext": "Data Source=localhost;Database=MeichuHackaThon2024;Trusted_Connection=True;TrustServerCertificate=True;"
+  "ConnectionStrings": {
+    "MeichuHackaThonDBContext": "Data Source=localhost;Database=MeichuHackaThonDBContext;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
 }
