--- a/MeichuHackaThon2024Frontend/package.json
+++ b/MeichuHackaThon2024Frontend/package.json
@@ -18,7 +18,8 @@
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
-    "@fortawesome/vue-fontawesome": "^3.0.8"
+    "@fortawesome/vue-fontawesome": "^3.0.8",
+    "vue3-radial-progress": "^1.1.1"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
