feat(PathPage.vue): 細節調整
- BottomInfo 針對終點 icon 設計
- LoadingDialog 顏色調整
- PopUpDialog 調整 props 以及煙火效果控制
- PathPage 新增 handlePopUpDialog 事件

--- a/MeichuHackaThon2024Frontend/package.json
+++ b/MeichuHackaThon2024Frontend/package.json
@@ -11,14 +11,16 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
-    "pinia": "^2.1.7",
-    "vue": "^3.4.29",
-    "vue-router": "^4.3.3",
+    "@fireworks-js/vue": "^2.10.8",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "pinia": "^2.1.7",
+    "vue": "^3.4.29",
+    "vue-axios": "^3.5.2",
+    "vue-router": "^4.3.3",
     "vue3-radial-progress": "^1.1.1"
   },
   "devDependencies": {
