--- a/MeichuHackaThon2024Services/MeichuHackaThon2024Services.csproj
+++ b/MeichuHackaThon2024Services/MeichuHackaThon2024Services.csproj
@@ -7,12 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Interface\" />
-    <Folder Include="Services\" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+    <ProjectReference Include="..\MeichuHackaThon2024Model\MeichuHackaThon2024Model.csproj" />
   </ItemGroup>
 
 </Project>
