--- a/MeichuHackaThon2024Frontend/package.json
+++ b/MeichuHackaThon2024Frontend/package.json
@@ -8,7 +8,8 @@
     "build": "run-p \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
-    "type-check": "vue-tsc --build --force"
+    "type-check": "vue-tsc --build --force",
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
     "@fireworks-js/vue": "^2.10.8",
@@ -35,6 +36,7 @@
     "autoprefixer": "^10.4.20",
     "npm-run-all2": "^6.2.0",
     "postcss": "^8.4.47",
+    "push-dir": "^0.4.1",
     "sass-embedded": "^1.79.4",
     "tailwindcss": "^3.4.13",
     "typescript": "~5.4.0",
